--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jasmine"
+    "test": "node ./node_modules/jasmine/bin/jasmine.js"
   },
   "devDependencies": {
     "jasmine": "^3.3.1",
