--- a/selenium-csharp.yml
+++ b/selenium-csharp.yml
@@ -32,7 +32,7 @@ steps:
 - task: PublishTestResults@2
   inputs:
     testResultsFiles: '*.trx'
-    testResultsFormat: 'xUnit'
+    testResultsFormat: 'VSTest'
     searchFolder: $(Common.TestResultsDirectory)
     publishRunAttachments: true
   condition: succeededOrFailed()
