--- a/puppeteer/.editorconfig
+++ b/puppeteer/.editorconfig
@@ -17,3 +17,6 @@ charset = utf-8
 charset = utf-8
 max_line_length = off
 trim_trailing_whitespace = false
+
+[spec/support/jasmine.json]
+end_of_line = lf
