--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "test": "node ./node_modules/jasmine/bin/jasmine.js"
+    "test": "node ./node_modules/mocha/bin/mocha"
   },
   "devDependencies": {
-    "jasmine": "^3.3.1",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "puppeteer": "^1.11.0"
   },
   "private": true
