--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha"
+    "test": "node ./node_modules/mocha/bin/mocha",
+    "test-ci": "node ./node_modules/mocha/bin/mocha --reporter mocha-junit-reporter"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.18.0",
     "puppeteer": "^1.11.0"
   },
   "private": true
