--- a/puppeteer/tsconfig.json
+++ b/puppeteer/tsconfig.json
@@ -1,11 +1,8 @@
 {
-    "compilerOptions": {
-        "outDir": "./dist",
-        "target": "es6",
-        "module": "commonjs"
-    },
-    "include": [
-        "./*.ts",
-        "./test/**/*.ts"
-    ]
+  "compilerOptions": {
+    "outDir": "./dist",
+    "target": "ES2017",
+    "module": "commonjs"
+  },
+  "include": ["./*.ts", "./test/**/*.ts"]
 }
