--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -4,15 +4,15 @@
     "test-ci": "mocha --reporter mocha-junit-reporter test/**/*.test.ts"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.5",
-    "@types/puppeteer": "^1.11.1",
+    "@types/chai": "4.2.4",
+    "@types/mocha": "5.2.7",
+    "@types/puppeteer": "1.20.2",
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "mocha-junit-reporter": "^1.18.0",
-    "puppeteer": "^1.11.0",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.2.2"
+    "mocha": "6.2.2",
+    "mocha-junit-reporter": "1.23.1",
+    "puppeteer": "2.0.0",
+    "ts-node": "8.4.1",
+    "typescript": "3.7.2"
   },
   "private": true
 }
