--- a/selenium-csharp.yml
+++ b/selenium-csharp.yml
@@ -15,11 +15,11 @@ trigger:
 steps:
 
 - bash: |
-    cd selenium-csharp/src/GitHubSelenium
+    cd selenium-csharp/src/SeleniumCSharp
     dotnet test --logger trx --results-directory $(Common.TestResultsDirectory) --output $(Build.StagingDirectory)
   env:
-    GitHub__SignInCredentials__Password: $(GitHub.SignInCredentials.Password)
-    GitHub__SignInCredentials__Username: $(GitHub.SignInCredentials.Username)
+    Goodreads__SignInCredentials__Password: $(Goodreads.SignInCredentials.Password)
+    Goodreads__SignInCredentials__Username: $(Goodreads.SignInCredentials.Username)
   displayName: Run tests
 
 - task: PublishPipelineArtifact@0
