--- a/selenium-csharp.yml
+++ b/selenium-csharp.yml
@@ -15,12 +15,18 @@ trigger:
 steps:
 
 - bash: |
-    cd selenium-csharp/src/SeleniumCSharp
+    wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    sudo apt install ./google-chrome-stable_current_amd64.deb
+  displayName: Install latest Chrome
+  workingDirectory: $(Build.StagingDirectory)
+
+- bash: |
     dotnet test --logger trx --results-directory $(Common.TestResultsDirectory) --output $(Build.StagingDirectory)
   env:
     Goodreads__SignInCredentials__Password: $(Goodreads.SignInCredentials.Password)
     Goodreads__SignInCredentials__Username: $(Goodreads.SignInCredentials.Username)
   displayName: Run tests
+  workingDirectory: selenium-csharp/src/SeleniumCSharp
 
 - task: PublishPipelineArtifact@0
   inputs:
