--- a/selenium-csharp.yml
+++ b/selenium-csharp.yml
@@ -24,7 +24,7 @@ steps:
     dotnet test --logger trx --results-directory $(Common.TestResultsDirectory) --output $(Build.StagingDirectory)
   env:
     Goodreads__SignInCredentials__Password: $(Goodreads.SignInCredentials.Password)
-    Goodreads__SignInCredentials__Username: $(Goodreads.SignInCredentials.Username)
+    Goodreads__SignInCredentials__EmailAddress: $(Goodreads.SignInCredentials.EmailAddress)
   displayName: Run tests
   workingDirectory: selenium-csharp/src/SeleniumCSharp
 
