--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -8,10 +8,10 @@
     "@types/mocha": "7.0.2",
     "@types/puppeteer": "2.0.1",
     "chai": "^4.2.0",
-    "mocha": "7.1.1",
+    "mocha": "7.1.2",
     "mocha-junit-reporter": "1.23.3",
-    "puppeteer": "2.1.1",
-    "ts-node": "8.8.2",
+    "puppeteer": "3.0.2",
+    "ts-node": "^8.10.1",
     "typescript": "3.8.3"
   },
   "private": true
