--- a/puppeteer.yml
+++ b/puppeteer.yml
@@ -26,6 +26,11 @@ steps:
     ProjectDirectory: puppeteer
 
 - bash: |
+    sudo apt-get update
+    sudo apt-get install -y libgbm1
+  displayName: Install libgbm1 (required by Puppeteer 3)
+
+- bash: |
     yarn test-ci
   env:
     GABO_GOODREADS_SIGNINCREDENTIALS_EMAILADDRESS: $(Goodreads.SignInCredentials.EmailAddress)
