--- a/selenium-csharp.yml
+++ b/selenium-csharp.yml
@@ -28,6 +28,12 @@ steps:
   displayName: Install latest Chrome
   workingDirectory: $(Build.StagingDirectory)
 
+- task: UseDotNet@2
+  displayName: Use .NET 6.0
+  inputs:
+    packageType: 'sdk'
+    version: '6.0.x'
+
 - bash: |
     mkdir $(Build.StagingDirectory)/screenshots
     dotnet test --logger trx --results-directory $(Common.TestResultsDirectory) --output $(Build.StagingDirectory)
