--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -19,5 +19,6 @@
     "ts-node": "^8.10.1",
     "typescript": "3.8.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@3.1.1"
 }
