Install packages using Yarn Modern

--- a/puppeteer/.gitignore
+++ b/puppeteer/.gitignore
@@ -7,8 +7,14 @@ node_modules/
 screenshots/
 
 # Yarn
-
 yarn-error.log
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # JUnit reporter (for Azure DevOps)
 
