--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -9,15 +9,15 @@
     "slow": 20000
   },
   "devDependencies": {
-    "@types/chai": "4.2.11",
-    "@types/mocha": "7.0.2",
-    "@types/puppeteer": "2.0.1",
-    "chai": "^4.2.0",
-    "mocha": "7.1.2",
-    "mocha-junit-reporter": "1.23.3",
-    "puppeteer": "3.0.2",
-    "ts-node": "^8.10.1",
-    "typescript": "3.8.3"
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.0.0",
+    "@types/puppeteer": "^5.4.4",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.4",
+    "mocha-junit-reporter": "^2.0.2",
+    "puppeteer": "^13.1.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   },
   "private": true,
   "packageManager": "yarn@3.1.1"
