--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^17.0.12",
     "@types/puppeteer": "^5.4.4",
     "chai": "^4.3.4",
     "mocha": "^9.1.4",
