--- a/.github/workflows/security-scanning-csharp.yml
+++ b/.github/workflows/security-scanning-csharp.yml
@@ -1,10 +1,16 @@
-name: "Security scanning"
+name: "C# Security scanning"
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+    paths:
+      - 'selenium-csharp/**'
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+    paths:
+      - 'selenium-csharp/**'
   schedule:
     - cron: '22 21 * * 5'
 
@@ -20,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'csharp', 'javascript' ]
+        language: [ 'csharp' ]
 
     steps:
     - name: Checkout repository
