--- a/.github/workflows/puppeteer.yml
+++ b/.github/workflows/puppeteer.yml
@@ -5,12 +5,14 @@ on:
     branches:
       - main
     paths:
+      - .github/workflows/puppeteer.yml
       - 'puppeteer/**'
       - '!puppeteer/README.md'
   pull_request:
     branches:
       - main
     paths:
+      - .github/workflows/puppeteer.yml
       - 'puppeteer/**'
       - '!puppeteer/README.md'
   schedule:
