--- a/.github/workflows/selenium-csharp.yml
+++ b/.github/workflows/selenium-csharp.yml
@@ -5,12 +5,14 @@ on:
     branches:
       - main
     paths:
+      - .github/workflows/selenium-csharp.yml
       - 'selenium-csharp/**'
       - '!selenium-csharp/README.md'
   pull_request:
     branches:
       - main
     paths:
+      - .github/workflows/selenium-csharp.yml
       - 'selenium-csharp/**'
       - '!selenium-csharp/README.md'
   schedule:
