--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "mocha test/**/*.test.ts",
-    "test-ci": "mocha --reporter mocha-junit-reporter test/**/*.test.ts"
+    "test-ci": "mocha --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results,json=false test/**/*.test.ts"
   },
   "mocha": {
     "require": "ts-node/register",
@@ -15,7 +15,7 @@
     "@types/puppeteer": "^5.4.4",
     "chai": "^4.3.4",
     "mocha": "^9.1.4",
-    "mocha-junit-reporter": "^2.0.2",
+    "mochawesome": "^7.1.3",
     "puppeteer": "^13.1.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
