--- a/.github/workflows/skipped-puppeteer.yml
+++ b/.github/workflows/skipped-puppeteer.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths-ignore:
       - .github/workflows/puppeteer.yml
+      - '.vscode/**'
       - 'puppeteer/**'
       - '!puppeteer/README.md'
 
