Use Microsoft code quality rules

--- a/selenium-csharp/src/SeleniumCSharp/SeleniumCSharp.csproj
+++ b/selenium-csharp/src/SeleniumCSharp/SeleniumCSharp.csproj
@@ -7,6 +7,9 @@
     <Nullable>enable</Nullable>
     <UserSecretsId>1f2e614f-00e3-42b6-b4a0-afaff9dd344e</UserSecretsId>
     <IsPackable>false</IsPackable>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <AnalysisLevel>latest</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
