--- a/.github/workflows/security-scanning-csharp.yml
+++ b/.github/workflows/security-scanning-csharp.yml
@@ -27,6 +27,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Install .NET 8
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '8.0.x'
+        dotnet-quality: 'ga'
+
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
