--- a/.github/workflows/selenium-csharp.yml
+++ b/.github/workflows/selenium-csharp.yml
@@ -30,10 +30,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Install .NET 7
-        uses: actions/setup-dotnet@v3
+      - uses: actions/setup-dotnet@v3
+        name: Install .NET 8
         with:
-          dotnet-version: 7
+          dotnet-version: '8.0.x'
+          dotnet-quality: 'ga'
       - name: Install latest Chrome
         run: |
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
