--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "mocha test/**/*.test.ts",
-    "test-ci": "mocha --exclude test/sign-in.test.ts --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results,json=false test/**/*.test.ts"
+    "test-ci": "mocha --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results,json=false test/**/*.test.ts"
   },
   "mocha": {
     "require": "ts-node/register",
