--- a/.github/workflows/selenium-csharp.yml
+++ b/.github/workflows/selenium-csharp.yml
@@ -40,10 +40,10 @@ jobs:
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install ./google-chrome-stable_current_amd64.deb
       - name: Run tests
-        run: dotnet test --filter FullyQualifiedName!=SeleniumCSharp.SignIn.Scenario --logger "html;LogFileName=test-results.html" --logger GitHubActions --results-directory ${{ runner.temp }} --output ${{ runner.temp }}
+        run: dotnet test --logger "html;LogFileName=test-results.html" --logger GitHubActions --results-directory ${{ runner.temp }} --output ${{ runner.temp }}
         env:
-          Goodreads__SignInCredentials__EmailAddress: ${{ secrets.EMAILADDRESS }}
-          Goodreads__SignInCredentials__Password: ${{ secrets.PASSWORD }}
+          Reddit__SignInCredentials__Username: ${{ secrets.USERNAME }}
+          Reddit__SignInCredentials__Password: ${{ secrets.PASSWORD }}
       - name: Upload screenshot(s) after test(s) failure
         uses: actions/upload-artifact@v4
         if: failure()
